--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -35,7 +35,7 @@
 
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img [src]="miPortfolio.bannerDos" class="d-block w-100" alt="...">
+      <img src="https://firebasestorage.googleapis.com/v0/b/portauthar528folio.appspot.com/o/imagen%2Fbanner.png?alt=media&token=259a9c5a-67cb-45cc-9565-b753add0917a" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <h5></h5>
         <p></p>
@@ -47,12 +47,12 @@
 
   <div class="container-fluid position-absolute top-0 start-0 z-2">
 
-    <img src="/assets/img/perfil extendido.png" alt="" class="img-fluid">
+    <img src="https://firebasestorage.googleapis.com/v0/b/portauthar528folio.appspot.com/o/imagen%2Fperfil.png?alt=media&token=fc638fd0-ede3-46fc-b5f6-8d50439c12df" alt="" class="img-fluid">
     
   </div>
 
   <div class=" position-absolute top-0 start-0 z-2">
-    <button *ngIf ="isLoged==true" class="btn btn-outline-dark btn-warning btn-outline-success btn-sm py-0 px-1" routerLink="/EditAndNew" type="submit">editar</button>
+    <button *ngIf ="isLoged==true" class="btn btn-outline-dark btn-warning btn-outline-success btn-sm py-0 px-1" routerLink="/EditAndNew/perfil/1" type="submit">editar</button>
   </div>
 
 </div>
